<resources>
    <string name="app_name">Guided Lab</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="loginHint">Enter a username</string>
    <string name="loginBtnText">Login</string>
    <string name="errMessageLogin">Invalid login. Please retry.</string>
    <string name="errMessagePassword">Invalid Password. Please retry.</string>
    <string name="nameF">First Name</string>
    <string name="nameL">Last Name</string>
    <string name="phone">Phone</string>
    <string name="DOB">Date of Birth</string>
    <string-array name="listMonth">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="txtCert">Certificate</string>
    <string name="twoYr">Associates Degree</string>
    <string name="txtMajor">Major</string>
    <string name="txtNext">Next</string>
    <string-array name="listCert">
        <item>Android Cerificate</item>
        <item>iOS Mobile Certificate</item>
    </string-array>
    <string-array name="listMajor">
        <item>Digital Media</item>
        <item>Mobile Application and Development</item>
        <item>Web Development</item>
    </string-array>
    <string name="sectionClass">Select your class and time slot:</string>
    <string name="class1">MAD-107: iOS I</string>
    <string name="class2">MAD-155: Android II</string>
    <string name="class3">MAD-157: iOS II</string>
    <string name="class4">MAD-257: Capstone Mobile Class</string>
    <string name="timeRb1">T /Th. 12:00 PM. - 1:50 PM</string>
    <string name="timeRb2">M/W. 10:00 AM. - 11:50 AM</string>
    <string name="timeRb3">T/Th 12:00. PM. - 1:50. PM</string>
    <string name="timeRb4">T/Th. 4: 00 PM. - 5:50. PM</string>
    <string name="timeRb5">F. 9:00 AM. - 12:50. PM</string>
    <string name="timeRb6">M/w. 12:00 PM. - 1:50. PM</string>
    <string name="sumName">Student:</string>
    <string name="sumPhone">Phone:</string>
    <string name="sumBirth">Birthdate:</string>
    <string name="sumDegree">Degree. Plan:</string>
    <string name="sumMajor">Major:</string>
    <string name="sumNext">Next Semester:</string>
</resources>