<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseClass">

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="341dp"
        android:layout_height="66dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idctv4">

        <RadioButton
            android:id="@+id/idRB7"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/timeRb2" />

        <RadioButton
            android:id="@+id/idRB8"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/timeRb5" />
    </RadioGroup>

    <CheckedTextView
        android:id="@+id/idctv4"
        android:layout_width="368dp"
        android:layout_height="37dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/class4"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="341dp"
        android:layout_height="66dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idctv3">

        <RadioButton
            android:id="@+id/idRB5"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/timeRb5" />

        <RadioButton
            android:id="@+id/idRB6"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/timeRb6" />
    </RadioGroup>

    <CheckedTextView
        android:id="@+id/idctv3"
        android:layout_width="368dp"
        android:layout_height="37dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/class3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <CheckedTextView
        android:id="@+id/idctv"
        android:layout_width="368dp"
        android:layout_height="37dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/class1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTitleSelectCourse" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="341dp"
        android:layout_height="66dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idctv">

        <RadioButton
            android:id="@+id/idRB1"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/timeRb1" />

        <RadioButton
            android:id="@+id/idRB2"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/timeRb2" />

    </RadioGroup>

    <TextView
        android:id="@+id/idTitleSelectCourse"
        android:layout_width="367dp"
        android:layout_height="40dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="22dp"
        android:text="@string/sectionClass"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckedTextView
        android:id="@+id/idctv2"
        android:layout_width="368dp"
        android:layout_height="37dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/class2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="341dp"
        android:layout_height="66dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idctv2">

        <RadioButton
            android:id="@+id/idRB3"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/timeRb3" />

        <RadioButton
            android:id="@+id/idRB4"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/timeRb4" />
    </RadioGroup>

    <Button
        android:id="@+id/idBtnNext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="66dp"
        android:text="@string/txtNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

</androidx.constraintlayout.widget.ConstraintLayout>