<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/idLogin"
        android:layout_width="79dp"
        android:layout_height="37dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="112dp"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idPassword"
        android:layout_width="118dp"
        android:layout_height="44dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="280dp"
        android:text="@string/password"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLogin" />

    <Button
        android:id="@+id/idBtn"
        android:layout_width="130dp"
        android:layout_height="67dp"
        android:layout_marginTop="88dp"
        android:selectAllOnFocus="true"
        android:text="@string/loginBtnText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPasswordEntry" />

    <ImageView
        android:id="@+id/idMCCLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="121dp"
        android:layout_marginBottom="115dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idBtn"
        app:srcCompat="@drawable/mcc_logo" />

    <EditText
        android:id="@+id/idPasswordEntry"
        android:layout_width="239dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="14dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/idPassword"
        app:layout_constraintTop_toBottomOf="@+id/idUsernameEntry" />

    <EditText
        android:id="@+id/idUsernameEntry"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/loginHint"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/idLogin"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>